// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`excerpt rspack > test auto 1`] = `
"<!DOCTYPE html>
<html>
  <head>
    <meta charset=\\"utf-8\\"/>
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1.0\\" />
    <title>Webpack App</title>
    <link rel=\\"preload\\" href=\\"/src_lazy_ts.js\\" type=\\"application/javascript\\" as=\\"script\\"><link rel=\\"preload\\" href=\\"/src_lazy_ts.css\\" type=\\"text/css\\" as=\\"style\\"><link rel=\\"preload\\" href=\\"/Roboto-Regular-0ada90f2c35bff5aade7.woff2\\" type=\\"font/woff2\\" as=\\"font\\"><link rel=\\"preload\\" href=\\"/Roboto-Italic-e27e8afcee204b1846ee.woff2\\" type=\\"font/woff2\\" as=\\"font\\"><script defer src=\\"/main.js\\"></script><link href=\\"/main.css\\" rel=\\"stylesheet\\">
    <!--__unplugin-inject-preload__-->
  </head>
  <body>
    <h1>Unplugin Inject Preload</h1>
    
  </body>
</html>
"
`;

exports[`excerpt rspack > test auto with basePath 1`] = `
"<!DOCTYPE html>
<html>
  <head>
    <meta charset=\\"utf-8\\"/>
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1.0\\" />
    <title>Webpack App</title>
    <link rel=\\"preload\\" href=\\"/base/src_lazy_ts.js\\" type=\\"application/javascript\\" as=\\"script\\"><link rel=\\"preload\\" href=\\"/base/src_lazy_ts.css\\" type=\\"text/css\\" as=\\"style\\"><link rel=\\"preload\\" href=\\"/base/Roboto-Regular-0ada90f2c35bff5aade7.woff2\\" type=\\"font/woff2\\" as=\\"font\\"><link rel=\\"preload\\" href=\\"/base/Roboto-Italic-e27e8afcee204b1846ee.woff2\\" type=\\"font/woff2\\" as=\\"font\\"><script defer src=\\"/base/main.js\\"></script><link href=\\"/base/main.css\\" rel=\\"stylesheet\\">
    <!--__unplugin-inject-preload__-->
  </head>
  <body>
    <h1>Unplugin Inject Preload</h1>
    
  </body>
</html>
"
`;

exports[`excerpt rspack > test customAttributes 1`] = `
"<!DOCTYPE html>
<html>
  <head>
    <meta charset=\\"utf-8\\"/>
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1.0\\" />
    <title>Webpack App</title>
    <link rel=\\"preload\\" href=\\"/Roboto-Regular-0ada90f2c35bff5aade7.woff2\\" type=\\"font/woff2\\" as=\\"font\\" crossorigin=\\"anonymous\\" data-font=\\"Roboto\\"><link rel=\\"preload\\" href=\\"/Roboto-Italic-e27e8afcee204b1846ee.woff2\\" type=\\"font/woff2\\" as=\\"font\\" crossorigin=\\"anonymous\\" data-font=\\"Roboto\\"><script defer src=\\"/main.js\\"></script><link href=\\"/main.css\\" rel=\\"stylesheet\\">
    <!--__unplugin-inject-preload__-->
  </head>
  <body>
    <h1>Unplugin Inject Preload</h1>
    
  </body>
</html>
"
`;

exports[`excerpt rspack > test customAttributes with basePath 1`] = `
"<!DOCTYPE html>
<html>
  <head>
    <meta charset=\\"utf-8\\"/>
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1.0\\" />
    <title>Webpack App</title>
    <link rel=\\"preload\\" href=\\"/base/Roboto-Regular-0ada90f2c35bff5aade7.woff2\\" type=\\"font/woff2\\" as=\\"font\\" crossorigin=\\"anonymous\\" data-font=\\"Roboto\\"><link rel=\\"preload\\" href=\\"/base/Roboto-Italic-e27e8afcee204b1846ee.woff2\\" type=\\"font/woff2\\" as=\\"font\\" crossorigin=\\"anonymous\\" data-font=\\"Roboto\\"><script defer src=\\"/base/main.js\\"></script><link href=\\"/base/main.css\\" rel=\\"stylesheet\\">
    <!--__unplugin-inject-preload__-->
  </head>
  <body>
    <h1>Unplugin Inject Preload</h1>
    
  </body>
</html>
"
`;

exports[`excerpt rspack > test customPosition 1`] = `
"<!DOCTYPE html>
<html>
  <head>
    <meta charset=\\"utf-8\\"/>
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1.0\\" />
    <title>Webpack App</title>
    <script defer src=\\"/main.js\\"></script><link href=\\"/main.css\\" rel=\\"stylesheet\\">

    <link rel=\\"preload\\" href=\\"/Roboto-Italic-e27e8afcee204b1846ee.woff2\\" type=\\"font/woff2\\" as=\\"font\\" data-vite-plugin-inject-preload>
    <link rel=\\"preload\\" href=\\"/Roboto-Regular-0ada90f2c35bff5aade7.woff2\\" type=\\"font/woff2\\" as=\\"font\\" data-vite-plugin-inject-preload>
    <link rel=\\"preload\\" href=\\"/src_lazy_ts.css\\" type=\\"text/css\\" as=\\"style\\">
    <link rel=\\"preload\\" href=\\"/src_lazy_ts.js\\" type=\\"application/javascript\\" as=\\"script\\">

  </head>
  <body>
    <h1>Unplugin Inject Preload</h1>
    
  </body>
</html>
"
`;

exports[`excerpt rspack > test customPosition with basePath 1`] = `
"<!DOCTYPE html>
<html>
  <head>
    <meta charset=\\"utf-8\\"/>
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1.0\\" />
    <title>Webpack App</title>
    <script defer src=\\"/base/main.js\\"></script><link href=\\"/base/main.css\\" rel=\\"stylesheet\\">

    <link rel=\\"preload\\" href=\\"/base/Roboto-Italic-e27e8afcee204b1846ee.woff2\\" type=\\"font/woff2\\" as=\\"font\\" data-vite-plugin-inject-preload>
    <link rel=\\"preload\\" href=\\"/base/Roboto-Regular-0ada90f2c35bff5aade7.woff2\\" type=\\"font/woff2\\" as=\\"font\\" data-vite-plugin-inject-preload>
    <link rel=\\"preload\\" href=\\"/base/src_lazy_ts.css\\" type=\\"text/css\\" as=\\"style\\">
    <link rel=\\"preload\\" href=\\"/base/src_lazy_ts.js\\" type=\\"application/javascript\\" as=\\"script\\">

  </head>
  <body>
    <h1>Unplugin Inject Preload</h1>
    
  </body>
</html>
"
`;

exports[`excerpt rspack > test entryMatch 1`] = `
"<!DOCTYPE html>
<html>
  <head>
    <meta charset=\\"utf-8\\"/>
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1.0\\" />
    <title>Webpack App</title>
    <script defer src=\\"/main.js\\"></script><link href=\\"/main.css\\" rel=\\"stylesheet\\"><link rel=\\"preload\\" href=\\"/Roboto-Italic-e27e8afcee204b1846ee.woff2\\" type=\\"font/woff2\\" as=\\"font\\"><link rel=\\"preload\\" href=\\"/Roboto-Regular-0ada90f2c35bff5aade7.woff2\\" type=\\"font/woff2\\" as=\\"font\\">
    <!--__unplugin-inject-preload__-->
  </head>
  <body>
    <h1>Unplugin Inject Preload</h1>
    
  </body>
</html>
"
`;

exports[`excerpt rspack > test entryMatch with basePath 1`] = `
"<!DOCTYPE html>
<html>
  <head>
    <meta charset=\\"utf-8\\"/>
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1.0\\" />
    <title>Webpack App</title>
    <script defer src=\\"/base/main.js\\"></script><link href=\\"/base/main.css\\" rel=\\"stylesheet\\"><link rel=\\"preload\\" href=\\"/base/Roboto-Italic-e27e8afcee204b1846ee.woff2\\" type=\\"font/woff2\\" as=\\"font\\"><link rel=\\"preload\\" href=\\"/base/Roboto-Regular-0ada90f2c35bff5aade7.woff2\\" type=\\"font/woff2\\" as=\\"font\\">
    <!--__unplugin-inject-preload__-->
  </head>
  <body>
    <h1>Unplugin Inject Preload</h1>
    
  </body>
</html>
"
`;

exports[`excerpt rspack > test injectBottom 1`] = `
"<!DOCTYPE html>
<html>
  <head>
    <meta charset=\\"utf-8\\"/>
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1.0\\" />
    <title>Webpack App</title>
    <script defer src=\\"/main.js\\"></script><link href=\\"/main.css\\" rel=\\"stylesheet\\"><link rel=\\"preload\\" href=\\"/Roboto-Italic-e27e8afcee204b1846ee.woff2\\" type=\\"font/woff2\\" as=\\"font\\"><link rel=\\"preload\\" href=\\"/Roboto-Regular-0ada90f2c35bff5aade7.woff2\\" type=\\"font/woff2\\" as=\\"font\\"><link rel=\\"preload\\" href=\\"/src_lazy_ts.css\\" type=\\"text/css\\" as=\\"style\\"><link rel=\\"preload\\" href=\\"/src_lazy_ts.js\\" type=\\"application/javascript\\" as=\\"script\\">
    <!--__unplugin-inject-preload__-->
  </head>
  <body>
    <h1>Unplugin Inject Preload</h1>
    
  </body>
</html>
"
`;

exports[`excerpt rspack > test injectBottom with basePath 1`] = `
"<!DOCTYPE html>
<html>
  <head>
    <meta charset=\\"utf-8\\"/>
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1.0\\" />
    <title>Webpack App</title>
    <script defer src=\\"/base/main.js\\"></script><link href=\\"/base/main.css\\" rel=\\"stylesheet\\"><link rel=\\"preload\\" href=\\"/base/Roboto-Italic-e27e8afcee204b1846ee.woff2\\" type=\\"font/woff2\\" as=\\"font\\"><link rel=\\"preload\\" href=\\"/base/Roboto-Regular-0ada90f2c35bff5aade7.woff2\\" type=\\"font/woff2\\" as=\\"font\\"><link rel=\\"preload\\" href=\\"/base/src_lazy_ts.css\\" type=\\"text/css\\" as=\\"style\\"><link rel=\\"preload\\" href=\\"/base/src_lazy_ts.js\\" type=\\"application/javascript\\" as=\\"script\\">
    <!--__unplugin-inject-preload__-->
  </head>
  <body>
    <h1>Unplugin Inject Preload</h1>
    
  </body>
</html>
"
`;

exports[`excerpt rspack > test modulepreload 1`] = `
"<!DOCTYPE html>
<html>
  <head>
    <meta charset=\\"utf-8\\"/>
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1.0\\" />
    <title>Webpack App</title>
    <link rel=\\"modulepreload\\" href=\\"/src_lazy_ts.js\\" type=\\"application/javascript\\" as=\\"script\\"><script defer src=\\"/main.js\\"></script><link href=\\"/main.css\\" rel=\\"stylesheet\\">
    <!--__unplugin-inject-preload__-->
  </head>
  <body>
    <h1>Unplugin Inject Preload</h1>
    
  </body>
</html>
"
`;

exports[`excerpt rspack > test modulepreload with basePath 1`] = `
"<!DOCTYPE html>
<html>
  <head>
    <meta charset=\\"utf-8\\"/>
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1.0\\" />
    <title>Webpack App</title>
    <link rel=\\"modulepreload\\" href=\\"/base/src_lazy_ts.js\\" type=\\"application/javascript\\" as=\\"script\\"><script defer src=\\"/base/main.js\\"></script><link href=\\"/base/main.css\\" rel=\\"stylesheet\\">
    <!--__unplugin-inject-preload__-->
  </head>
  <body>
    <h1>Unplugin Inject Preload</h1>
    
  </body>
</html>
"
`;

exports[`excerpt rspack > test noMatch 1`] = `
"<!DOCTYPE html>
<html>
  <head>
    <meta charset=\\"utf-8\\"/>
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1.0\\" />
    <title>Webpack App</title>
    <script defer src=\\"/main.js\\"></script><link href=\\"/main.css\\" rel=\\"stylesheet\\">
    <!--__unplugin-inject-preload__-->
  </head>
  <body>
    <h1>Unplugin Inject Preload</h1>
    
  </body>
</html>
"
`;

exports[`excerpt rspack > test noMatch with basePath 1`] = `
"<!DOCTYPE html>
<html>
  <head>
    <meta charset=\\"utf-8\\"/>
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1.0\\" />
    <title>Webpack App</title>
    <script defer src=\\"/base/main.js\\"></script><link href=\\"/base/main.css\\" rel=\\"stylesheet\\">
    <!--__unplugin-inject-preload__-->
  </head>
  <body>
    <h1>Unplugin Inject Preload</h1>
    
  </body>
</html>
"
`;

exports[`excerpt rspack > test noType 1`] = `
"<!DOCTYPE html>
<html>
  <head>
    <meta charset=\\"utf-8\\"/>
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1.0\\" />
    <title>Webpack App</title>
    <link rel=\\"preload\\" href=\\"/Roboto-Regular-0ada90f2c35bff5aade7.woff2\\" as=\\"font\\"><link rel=\\"preload\\" href=\\"/Roboto-Italic-e27e8afcee204b1846ee.woff2\\" as=\\"font\\"><script defer src=\\"/main.js\\"></script><link href=\\"/main.css\\" rel=\\"stylesheet\\">
    <!--__unplugin-inject-preload__-->
  </head>
  <body>
    <h1>Unplugin Inject Preload</h1>
    
  </body>
</html>
"
`;

exports[`excerpt rspack > test noType with basePath 1`] = `
"<!DOCTYPE html>
<html>
  <head>
    <meta charset=\\"utf-8\\"/>
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1.0\\" />
    <title>Webpack App</title>
    <link rel=\\"preload\\" href=\\"/base/Roboto-Regular-0ada90f2c35bff5aade7.woff2\\" as=\\"font\\"><link rel=\\"preload\\" href=\\"/base/Roboto-Italic-e27e8afcee204b1846ee.woff2\\" as=\\"font\\"><script defer src=\\"/base/main.js\\"></script><link href=\\"/base/main.css\\" rel=\\"stylesheet\\">
    <!--__unplugin-inject-preload__-->
  </head>
  <body>
    <h1>Unplugin Inject Preload</h1>
    
  </body>
</html>
"
`;

exports[`excerpt rspack > test wrongAttributes 1`] = `
"<!DOCTYPE html>
<html>
  <head>
    <meta charset=\\"utf-8\\"/>
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1.0\\" />
    <title>Webpack App</title>
    <link rel=\\"preload\\" href=\\"./yolo.woff2\\" type=\\"font/woff2\\" as=\\"font\\"><link rel=\\"preload\\" href=\\"./yolo.woff2\\" type=\\"font/woff2\\" as=\\"font\\"><script defer src=\\"/main.js\\"></script><link href=\\"/main.css\\" rel=\\"stylesheet\\">
    <!--__unplugin-inject-preload__-->
  </head>
  <body>
    <h1>Unplugin Inject Preload</h1>
    
  </body>
</html>
"
`;

exports[`excerpt rspack > test wrongAttributes with basePath 1`] = `
"<!DOCTYPE html>
<html>
  <head>
    <meta charset=\\"utf-8\\"/>
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1.0\\" />
    <title>Webpack App</title>
    <link rel=\\"preload\\" href=\\"./yolo.woff2\\" type=\\"font/woff2\\" as=\\"font\\"><link rel=\\"preload\\" href=\\"./yolo.woff2\\" type=\\"font/woff2\\" as=\\"font\\"><script defer src=\\"/base/main.js\\"></script><link href=\\"/base/main.css\\" rel=\\"stylesheet\\">
    <!--__unplugin-inject-preload__-->
  </head>
  <body>
    <h1>Unplugin Inject Preload</h1>
    
  </body>
</html>
"
`;
